--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 [dependencies]
 actix-web = "4.1"
 sqlx = { version = "0.6.1", features = ["runtime-actix-rustls", "postgres"] }
+futures = "0.3"
 anyhow = "1.0"
 log = "0.4"
 dotenv = "0.15"
