--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -7,8 +7,10 @@ edition = "2021"
 [dependencies]
 # use bleeding edge of Yew because 0.19 is lame
 yew = { git = "https://github.com/yewstack/yew/" }
+gloo = "0.8"
 reqwest = { version = "0.11", features = ["json"] }
 ruinaio-model = { path = "../model" }
+pulldown-cmark = "0.9.2"
 
 [features]
 default = ["csr"]
