--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 [dependencies]
 # use bleeding edge of Yew because 0.19 is lame
 yew = { git = "https://github.com/yewstack/yew/" }
+web-sys = "0.3"
 gloo = "0.8"
 reqwest = { version = "0.11", features = ["json"] }
 ruinaio-model = { path = "../model" }
